deps/v8/test/message/fail/destructuring-object-private-name.out
*%(basename)s:10: SyntaxError: Unexpected identifier
    const { #x: x } = this;
            ^^
SyntaxError: Unexpected identifier
